# hng-task-1

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
homework/: stage1.md  stage2.md
src/: __init__.py  stage0.py
src/stage1/: db.py  main.py  models.py  utils.py
src/stage2/: __init__.py  db.py  main.py  models.py  utils.py
