[project]
name = "hng-stage-0"
version = "0.1.0"
description = "The first Task for HNG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpathlib==0.16.0",
    "fastapi>=0.119.0",
    "numpy==1.26.4",
    "requests>=2.32.5",
    "smart-open==6.4.0",
    "spacy==3.7.4",
    "thinc==8.2.2",
    "typer==0.9.4",
    "uvicorn>=0.37.0",
    "weasel==0.3.4",
]
